# langchain-skilllite

./: .gitignore  LICENSE  README.md  pyproject.toml
.skills/echo/: SKILL.md
.skills/echo/scripts/: script.py
.skills/greeter/: SKILL.md
.skills/greeter/scripts/: main.py
.skills/text-upper/: SKILL.md
.skills/text-upper/scripts/: uppper.py
examples/: 01_basic.py  02_with_callback.py  03_security_scan.py  04_direct_execute.py  basic_usage.py  simple_test.py  with_security_confirmation.py
langchain_skilllite/: __init__.py  _version.py  callbacks.py  tools.py
langchain_skilllite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
tests/integration_tests/: __init__.py  test_tools.py
tests/unit_tests/: __init__.py  test_callbacks.py  test_tools.py
