[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-skilllite"
version = "0.1.4"
description = "LangChain integration for SkillLite - Lightweight sandboxed Python skill execution engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SkillLite Team", email = "skilllite@example.com"}
]
keywords = [
    "langchain",
    "skilllite",
    "agent",
    "tools",
    "sandbox",
    "llm",
    "skills",
    "python-execution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.3.0",
    "skilllite>=0.1.1",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "langchain-tests>=0.3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "langchain-tests>=0.3.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/EXboys/langchain-skilllite"
Documentation = "https://github.com/EXboys/langchain-skilllite#readme"
Repository = "https://github.com/EXboys/langchain-skilllite"
Issues = "https://github.com/EXboys/langchain-skilllite/issues"
"LangChain" = "https://python.langchain.com/"
"SkillLite" = "https://github.com/EXboys/skilllite"

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_skilllite*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

